# baseball-gallery-collector

./: Cargo.toml
app/collector/: Cargo.toml
app/collector/src/: main.rs
app/collector/src/article/: article.rs  attach.rs  list.rs  mod.rs
app/collector/src/collector/: article.rs  board.rs  delete.rs  delete_entity.rs  entity.rs  mod.rs  scheduler.rs
app/collector/src/create_article/: entity.rs  mod.rs  spawn.rs
lib/entity/clickhouse-entity/: Cargo.toml
lib/entity/clickhouse-entity/src/: batch.rs  lib.rs
lib/entity/entity/: Cargo.toml
lib/entity/entity-derive/: Cargo.toml
lib/entity/entity/src/: lib.rs
lib/logger/: Cargo.toml
lib/logger/src/clickhouse/: consumer.rs  entity.rs  layer.rs  level_serializer.rs  mod.rs  visitor.rs
lib/util/: Cargo.toml
lib/util/src/: lib.rs
lib/util/src/log/: mod.rs
lib/util/src/shutdown/: mod.rs
