[package]
name = "collector"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls", "rustls-tls-webpki-roots"] }
once_cell = "1.21.3"
scraper = "0.25"
futures = "0.3.31"
chrono = "0.4.42"
thiserror = "2.0.12"
uuid = { version = "1", features = ["v7"] }