[package]
name = "collector"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls", "rustls-tls-webpki-roots"] }
once_cell = "1.21.3"
scraper = "0.25"
chrono = "0.4.42"
thiserror = "2.0.12"
uuid = { version = "1", features = ["v7"] }
util = { path = "../../lib/util" }
async-trait = "0.1.89"
tokio-stream = "0.1.18"
clickhouse = { version = "0.14.1", features = ["uuid", "time", "chrono"]}
serde = { version = "1", features = ["derive"] }