[package]
name = "logger"
version = "0.1.0"
edition = "2024"

[dependencies]
entity = { path = "../entity/entity" }
util = { path = "../util" }
clickhouse-entity = { path = "../entity/clickhouse-entity" }
tracing-subscriber = "0.3.22"
tracing = "0.1.44"
chrono = "0.4.43"
serde_json = "1.0.149"
clickhouse = { version = "0.14", features = ["uuid", "time"] }
tracing-serde = "0.2.0"
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
time = "0.3.41"
uuid = { version = "1", features = ["v7"] }
tokio = "1.49.0"
tokio-stream = "0.1.18"
async-trait = "0.1.89"
dashmap = "6"
serde_with = "3.16.1"