[package]
name = "clickhouse-entity"
version = "0.1.0"
edition = "2024"

[dependencies]
entity = { path = "../entity" }
util = { path = "../../util" }
clickhouse = "0.14.2"
anyhow = "1.0.100"
async-trait = "0.1.89"
tokio = "1.49.0"
tracing = "0.1.44"
serde = { version = "1.0.228", features = ["derive"] }
